--- a/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -2,9 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
-    <title>Cydeo</title>
+    <title th:text="#{index.page.title}"></title> //we added the title in messages.properties file
+
+    <link th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.css}" rel="stylesheet">
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet">
+
+
+
+
+
 </head>
 <body>
+
+<!--Bootstrap Integration-->
+<h1 class="display-1 text-danger">Welcome to Cydeo Student's Register Form</h1>
+
+<h2 class="cydeo">My Custom CSS</h2>
+
+
+<!--Image Integration-->
+<img th:src="@{/images/welcome-38249.png}">
+
 
 <!--Display Value of model-->
 <h2 th:text="${students.get(0).getFirstName()}"></h2>
@@ -36,7 +55,7 @@
 </h2>
 
 
-<!--Iteration-->
+<!--Iteration (loop)-->
 
 <h2>Printing my student list:</h2>
 <ul>
@@ -78,6 +97,23 @@
 
     </tbody>
 </table>
+
+
+<!--Conditional Logic-->
+
+<div th:text="${students.get(0).getAge() > 25 ? 'Eligible' : 'Not Eligible'}"></div>
+
+<div>
+    <span th:if="${students.get(0).getState() == 'Arizona'}">Arizona</span>
+    <span th:unless="${students.get(0).getState() == 'Arizona'}">No Arizona</span>
+</div>
+
+
+
+
+
+
+
 
 </body>
 </html>
